--- a/client/index.html
+++ b/client/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <title>DualSparkStudio | 3D Web Development</title>
+    <title>DualSparkStudio</title>
   </head>
   <body>
     <div id="root"></div>
