--- a/client/index.html
+++ b/client/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="DualSparkStudio - Professional web development and 3D interactive applications" />
-    <link rel="icon" type="image/x-icon" href="/DualSparkStudio/favicon.ico" />
-    <link rel="shortcut icon" type="image/x-icon" href="/DualSparkStudio/favicon.ico" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/DualSparkStudio/logo.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/DualSparkStudio/logo.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/DualSparkStudio/logo.png" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/logo.png" />
+    <link rel="icon" type="image/png" sizes="64x64" href="/favicon-64.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
