--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="DualSparkStudio - Professional web development and 3D interactive applications" />
+    <link rel="icon" href="/logo.png" type="image/png">
+    <meta property="og:image" content="https://dualsparkstudio.com/logo.png">
+    <meta name="twitter:image" content="https://dualsparkstudio.com/logo.png">
     <link rel="icon" type="image/png" href="/favicon_transparent_48x48.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
