--- a/client/index.html
+++ b/client/index.html
@@ -1,25 +1,32 @@
 <!DOCTYPE html>
+
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="DualSparkStudio - Professional web development and 3D interactive applications" />
-    <link rel="icon" href="/logobw.png" type="image/png">
-    <meta property="og:image" content="https://dualsparkstudio.com/logo.png">
-    <meta name="twitter:image" content="https://dualsparkstudio.com/logo.png">
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/logo.png" />
-    <link rel="icon" type="image/png" sizes="64x64" href="/favicon-64.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <title>DualSparkStudio</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+<head>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<meta content="DualSparkStudio - Professional web development and 3D interactive applications" name="description"/>
+<link href="/logobw.png" rel="icon" type="image/png"/>
+<meta content="https://dualsparkstudio.com/logo.png" property="og:image"/>
+<meta content="https://dualsparkstudio.com/logo.png" name="twitter:image"/>
+<link href="/favicon.ico" rel="icon" type="image/x-icon">
+<link href="/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
+<link href="/logo.png" rel="apple-touch-icon" sizes="180x180"/>
+<link href="/favicon-64.png" rel="icon" sizes="64x64" type="image/png"/>
+<link href="/favicon-32.png" rel="icon" sizes="32x32" type="image/png"/>
+<link href="/favicon-16.png" rel="icon" sizes="16x16" type="image/png"/>
+<link href="https://fonts.googleapis.com" rel="preconnect"/>
+<link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect"/>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&amp;display=swap" rel="stylesheet"/>
+<title>DualSparkStudio</title>
+</link><script type="application/ld+json">{
+  "@context": "https://schema.org",
+  "@type": "Organization",
+  "name": "DualSpark Studio",
+  "url": "https://dualsparkstudio.com",
+  "logo": "https://dualsparkstudio.com/logobw.png"
+}</script></head>
+<body><img alt="DualSpark Studio Logo" height="50" src="..\logobw.png"/>
+<div id="root"></div>
+<script src="/src/main.tsx" type="module"></script>
+</body>
 </html>
