--- a/client/index.html
+++ b/client/index.html
@@ -18,7 +18,7 @@
 <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect"/>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&amp;display=swap" rel="stylesheet"/>
 <title>DualSparkStudio</title>
-</link><script type="application/ld+json">{
+<script type="application/ld+json">{
   "@context": "https://schema.org",
   "@type": "Organization",
   "name": "DualSpark Studio",
