--- a/client/index.html
+++ b/client/index.html
@@ -16,7 +16,7 @@
 <link href="/favicon-16.png" rel="icon" sizes="16x16" type="image/png"/>
 <link href="https://fonts.googleapis.com" rel="preconnect"/>
 <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect"/>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&amp;display=swap" rel="stylesheet"/>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&amp;display=swap" rel="stylesheet"/>
 <title>DualSparkStudio</title>
 <script type="application/ld+json">{
   "@context": "https://schema.org",
@@ -25,7 +25,7 @@
   "url": "https://dualsparkstudio.com",
   "logo": "https://dualsparkstudio.com/logobw.png"
 }</script></head>
-<body><img alt="DualSpark Studio Logo" height="50" src="..\logobw.png"/>
+<body><img alt="DualSpark Studio Logo" height="50" src="..\logobw.png" loading="lazy"/>
 <div id="root"></div>
 <script src="/src/main.tsx" type="module"></script>
 </body>
