Refactor index.html files to remove logo image and replace with a root div for React rendering. Add ContactButtons component to Router for enhanced contact options.

--- a/client/index.html
+++ b/client/index.html
@@ -25,7 +25,7 @@
   "url": "https://dualsparkstudio.com",
   "logo": "https://dualsparkstudio.com/logobw.png"
 }</script></head>
-<body><img alt="DualSpark Studio Logo" height="50" src="..\logobw.png" loading="lazy"/>
+<body>
 <div id="root"></div>
 <script src="/src/main.tsx" type="module"></script>
 </body>
